--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,5 @@
 ################################################################################
 
 /.vs/brainstorm/v14/.suo
-/brainstorm/bin/*
-/brainstorm/obj/*
-/brainstorm.csproj
-/brainstorm.csproj.user
+/brainstorm/bin/
+/brainstorm/obj/
