--- a/BrainStorm/brainstorm.csproj
+++ b/BrainStorm/brainstorm.csproj
@@ -48,16 +48,20 @@
     <Compile Include="Exceptions\SimulationException.cs" />
     <Compile Include="Memory\DataMemory.cs" />
     <Compile Include="Memory\InstructionMemory.cs" />
+    <Compile Include="Processors\SP2000\Instructions\AddInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\ArithmeticInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\SP2000Instruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\ThreeOpInstruction.cs" />
+    <Compile Include="Processors\SP2000\Memory\SP2000DataMemory.cs" />
+    <Compile Include="Processors\SP2000\Memory\SP2000Registers.cs" />
+    <Compile Include="Processors\SP2000\Memory\SP200InstructionMemory.cs" />
     <Compile Include="Processors\SP2000\Processor\SP2000Processor.cs" />
     <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Processors\SP2000\Memory\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
