--- a/BrainStorm/brainstorm.csproj
+++ b/BrainStorm/brainstorm.csproj
@@ -36,9 +36,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\Core.cs" />
     <Compile Include="Base\Instruction.cs" />
     <Compile Include="Base\Memory.cs" />
     <Compile Include="Base\Processor.cs" />
+    <Compile Include="Base\Register.cs" />
     <Compile Include="Base\RegisterSet.cs" />
     <Compile Include="Exceptions\AssemblerException.cs" />
     <Compile Include="Exceptions\MemoryException.cs" />
@@ -70,6 +72,7 @@
     <Compile Include="Processors\SP2000\Memory\SP2000DataMemory.cs" />
     <Compile Include="Processors\SP2000\Memory\SP2000Registers.cs" />
     <Compile Include="Processors\SP2000\Memory\SP200InstructionMemory.cs" />
+    <Compile Include="Processors\SP2000\Processor\SP2000Core.cs" />
     <Compile Include="Processors\SP2000\Processor\SP2000Processor.cs" />
     <Compile Include="Test.cs" />
   </ItemGroup>
