--- a/BrainStorm/brainstorm.csproj
+++ b/BrainStorm/brainstorm.csproj
@@ -64,6 +64,16 @@
     <Compile Include="Processors\SP2000\Instructions\Bitwise\OrInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Bitwise\SllInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Bitwise\SrlInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\Branch\BeqInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\Branch\BgeInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\Branch\BgtInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\Branch\BleInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\Branch\BltInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\Branch\BneInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\Jump\JalInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\Jump\JInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\Jump\JrInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\Memory\LaInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Memory\LbInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Memory\LiInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Memory\LwInstruction.cs" />
@@ -75,7 +85,7 @@
     <Compile Include="Processors\SP2000\Instructions\SP2000Instruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Arithmetic\SubInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Arithmetic\SubuInstruction.cs" />
-    <Compile Include="Processors\SP2000\Instructions\ThreeOpInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\ThreeOperandInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Bitwise\XoriInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Bitwise\XorInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\TwoOperandInstruction.cs" />
