--- a/BrainStorm/brainstorm.csproj
+++ b/BrainStorm/brainstorm.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Processors\SP2000\Instructions\SP2000Instruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Arithmetic\SubInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Arithmetic\SubuInstruction.cs" />
+    <Compile Include="Processors\SP2000\Instructions\SyscallInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\ThreeOperandInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Bitwise\XoriInstruction.cs" />
     <Compile Include="Processors\SP2000\Instructions\Bitwise\XorInstruction.cs" />
